--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           in this addictive and challenging game of vertical survival!
         </p>
         
-        <a href="tower_climber_home.html" class="tower_climber_play">play</a>
+        <a href="Tower_Climber_home.html" class="tower_climber_play">play</a>
         
         <div class="gallery3">
           <div class="gallery-item9">
